# Django-FastAPI-Framework

./: .env  .env.example  .gitignore  README.md  pyproject.toml  runserver.sh
book/: admin.py  models.py  routers.py
project/: asgi.py  settings.py  urls.py  wsgi.py
user/: admin.py  models.py  routers.py  schemas.py
user/functions/: auth.py  permissions.py  query.py
user/util/: check_password.py  handler_error.py
